--- a/src/main/resources/static/html/goodsDetails.html
+++ b/src/main/resources/static/html/goodsDetails.html
@@ -30,26 +30,6 @@
                 <div class="view"><img id="goodsPic5" src="../sliderImg/iphoneX6.png"/></div>
             </figure>
         </li>
-        <li class="item falldown" id="item6">
-            <figure>
-                <div class="view"><img id="goodsPic6" src="../sliderImg/iphoneX6.png"/></div>
-            </figure>
-        </li>
-        <li class="item falldown" id="item7">
-            <figure>
-                <div class="view"><img id="goodsPic7" src="../sliderImg/iphoneX6.png"/></div>
-            </figure>
-        </li>
-        <li class="item falldown" id="item8">
-            <figure>
-                <div class="view"><img id="goodsPic8" src="../sliderImg/iphoneX6.png"/></div>
-            </figure>
-        </li>
-        <li class="item falldown" id="item9">
-            <figure>
-                <div class="view"><img id="goodsPic9" src="../sliderImg/iphoneX6.png"/></div>
-            </figure>
-        </li>
     </ul>
 </div>
 <script src="../js/jquery-3.1.1.js"></script>
@@ -58,5 +38,6 @@
 <script src="../sliderJs/scripts.js"></script>
 <script src="../js/goodsDetails.js"></script>
 <script src="../js/jquery.cookie.js"></script>
+<script src="../js/fileURL.js"></script>
 </body>
 </html>
