--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -15,6 +15,7 @@
 	<script src="../js/common.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
 	<script src="../js/cookie.js"></script>
+	<script src="../js/fileURL.js"></script>
 	<meta charset="UTF-8">
 	</head>
 	<body>
@@ -148,10 +149,7 @@
     					<!--滑块展示结束-->
     					<div id="goodsOthers">
 							<textarea id="ownerSay" class="form-control" rows="5"  readonly="readonly">
-								的法律框架快乐的积分浪费空间ADSL反馈记录卡第三方记录开始的减肥立刻将盛大六块腹肌剌肯定是解放路口j
-								接收的六块腹肌拉萨会计法律的空间撒德鲁克缴费厚大司考国会大厦赶快结婚的刷卡就好了可视对讲发了
-								发生的开官方卡拉还是都发奥斯卡交电话费卡时间的话反馈节点是否客家话山东科技付货款交话费可视电话
-								话费卡上附近肯定是个我为何无人空间是否会看见的手机客户
+
 							</textarea>
 						</div>
   					</div>
