--- a/src/main/resources/static/html/person.html
+++ b/src/main/resources/static/html/person.html
@@ -73,26 +73,26 @@
 					<!--编辑头像-->
 					<div id="edit-pic">
 						<form id="perPicForm"  method="post" enctype="multipart/form-data"> <input style="display: none !important;" id="select-pic-input" type="file" multiple name="uploadFile" accept="image/*" /></form>
-						<a id="select-new-pic" ><img class="notAllowed" id="per-pic-img" src="../img/gangtiexia.jpg"/></a>
+						<a id="select-new-pic" ><img class="notAllowed" id="per-pic-img" src=""/></a>
 					</div>
 				</div>
 				<div id="edit-ziliao">
 					<div id="edit-name">
 						<p id="edit-name-p">昵称</p>
-						<input id="edit-input" type="text" value="Double大宝" readonly="true"/>
+						<input id="edit-input" type="text" value="" readonly="true"/>
 						<img id="edit-open" src="../img/edit-open.png" title="编辑"/>
 					</div>
 					<div id="edit-qq">
 						<p id="edit-qq-p">QQ</p>
-						<input id="edit-input1" type="text" value="28736646464" readonly="true"/>
+						<input id="edit-input1" type="text" value="" readonly="true"/>
 					</div>
 					<div id="edit-weixin">
 						<p id="edit-weixin-p">微信</p>
-						<input id="edit-input2" type="text" value="12493648376487" readonly="true"/>
+						<input id="edit-input2" type="text" value="" readonly="true"/>
 					</div>
 					<div id="edit-sex">
 						<p id="edit-sex-p">性别</p>
-						<input id="edit-input3" type="text" value="纯爷们" readonly="true"/>
+						<input id="edit-input3" type="text" value="" readonly="true"/>
 					</div>
 					<div id="edit-btn">
 						<button id="save-btn" class="btn btn-danger disabled">保存</button>
