--- a/src/main/resources/static/html/personCenter/editPerFabuOtherPic.html
+++ b/src/main/resources/static/html/personCenter/editPerFabuOtherPic.html
@@ -66,58 +66,6 @@
                     </div>
                 </figure>
             </li>
-            <li class="item falldown" id="item6">
-                <figure>
-                    <div class="hovereffect">
-                        <input style="display: none !important;" onchange="selectOtherPic('6')" id="select-other-pic6"
-                               type="file" multiple name="uploadFiles" accept="image/*"/>
-                        <div class="view"><img id="goodsPic6" src="../../img/perCenter/loading.gif"/></div>
-                        <div class="overlay">
-                            <a class="info" id="changePic6" onclick="changePic('6')">更换</a>
-                            <a class="info" id="deletePic6" onclick="deletePic('6')">删除</a>
-                        </div>
-                    </div>
-                </figure>
-            </li>
-            <li class="item falldown" id="item7">
-                <figure>
-                    <div class="hovereffect">
-                        <input style="display: none !important;" onchange="selectOtherPic('7')" id="select-other-pic7"
-                               type="file" multiple name="uploadFiles" accept="image/*"/>
-                        <div class="view"><img id="goodsPic7" src="../../img/perCenter/loading.gif"/></div>
-                        <div class="overlay">
-                            <a class="info" id="changePic7" onclick="changePic('7')">更换</a>
-                            <a class="info" id="deletePic7" onclick="deletePic('7')">删除</a>
-                        </div>
-                    </div>
-                </figure>
-            </li>
-            <li class="item falldown" id="item8">
-                <figure>
-                    <div class="hovereffect">
-                        <input style="display: none !important;" onchange="selectOtherPic('8')" id="select-other-pic8"
-                               type="file" multiple name="uploadFiles" accept="image/*"/>
-                        <div class="view"><img id="goodsPic8" src="../../img/perCenter/loading.gif"/></div>
-                        <div class="overlay">
-                            <a class="info" id="changePic8" onclick="changePic('8')">更换</a>
-                            <a class="info" id="deletePic8" onclick="deletePic('8')">删除</a>
-                        </div>
-                    </div>
-                </figure>
-            </li>
-            <li class="item falldown" id="item9">
-                <figure>
-                    <div class="hovereffect">
-                        <input style="display: none !important;" onchange="selectOtherPic('9')" id="select-other-pic9"
-                               type="file" multiple name="uploadFiles" accept="image/*"/>
-                        <div class="view"><img id="goodsPic9" src="../../img/perCenter/loading.gif"/></div>
-                        <div class="overlay">
-                            <a class="info" id="changePic9" onclick="changePic('9')">更换</a>
-                            <a class="info" id="deletePic9" onclick="deletePic('9')">删除</a>
-                        </div>
-                    </div>
-                </figure>
-            </li>
             <!--   <li class="item" id="itemAdd">
                 <figure>
                       <div class="hovereffect" >
@@ -140,5 +88,6 @@
 <script src="../../sliderJs/scripts.js"></script>
 <script src="../../js/personCenterJS/editPerFaBuOtherPic.js"></script>
 <script src="../../js/jquery.cookie.js"></script>
+<script src="../../js/fileURL.js"></script>
 </body>
 </html>
