--- a/src/main/resources/static/html/personCenter/editPerFaBu.html
+++ b/src/main/resources/static/html/personCenter/editPerFaBu.html
@@ -11,6 +11,7 @@
     <script src="../../js/jquery-3.1.1.min.js"></script>
     <script src="../../js/bootstrap.min.js"></script>
     <script src="../../js/personCenterJS/editPerFaBu.js"></script>
+    <script src="../../js/fileURL.js"></script>
     <title></title>
 </head>
 <body>
