--- a/src/main/resources/static/html/main.html
+++ b/src/main/resources/static/html/main.html
@@ -276,13 +276,13 @@
 			<div id="section">
 				<div class="section-1 F8FAFCBackground">
 					<div class="section-red-title">
-						<h3>潮玩科技 <strong class="section-1-strong">TECHNOLOGY</strong></h3>
+						<h3>SK嗖嗖 <strong class="section-1-strong">SK SOU SOU</strong></h3>
 					</div>
 					<div class="section-1-pic">
 						<div class="hovereffect">
 							<img class="img-responsive" src="../img/section1Pic.jpg"/>
 							<div class="overlay">
-								<h2>电子产品专区</h2>
+								<h2>热门闲置</h2>
 								<a class="info" href="#">进入</a>
 							</div>
 						</div>
@@ -335,70 +335,6 @@
 						</div>
 					</div>
 				</div>
-				<div class="section-1">
-					<div class="section-blue-title">
-						<h3>书籍资料 <strong class="section-1-strong">BOOKS</strong></h3>
-					</div>
-					<div class="section-1-pic">
-						<div class="hovereffect">
-							<img class="img-responsive" src="../img/section1Pic.jpg"/>
-							<div class="overlay">
-								<h2>书籍资料专区</h2>
-								<a class="info" href="#">进入</a>
-							</div>
-						</div>
-					</div>
-					<div class="section-1-goods">
-						<div class="selection-1-1">
-							<div class="section-1-1-detail">
-								<img src="../img/iphone6.png"/>
-								<h4>Iphone7 <strong>￥150.00</strong></h4>
-							</div>
-							<div class="section-1-1-detail">
-								<img src="../img/ipad.jpg"/>
-								<h4>Ipad4 32G <strong>￥400.00</strong></h4>
-							</div>
-							<div class="section-1-1-detail">
-								<img src="../img/iwatch.jpg"/>
-								<h4>iWatch3代 <strong>￥521.00</strong></h4>
-							</div>
-							<div class="section-1-1-detail">
-								<img src="../img/iwatch2.jpg"/>
-								<h4>Iphone7 <strong>￥500.00</strong></h4>
-							</div>
-							<div class="section-1-1-detail">
-								<img src="../img/iphoneSE.png"/>
-								<h4>IphoneSE <strong>￥500.00</strong></h4>
-							</div>
-
-						</div>
-						<div class="selection-1-1">
-							<div class="section-1-1-detail">
-								<img src="../img/ipad.jpg"/>
-								<h4>小米Note<strong>￥300.00</strong> </h4>
-							</div>
-							<div class="section-1-1-detail">
-								<img src="../img/ipad.jpg"/>
-								<h4>Ipad4 32G <strong>￥500.00</strong></h4>
-							</div>
-							<div class="section-1-1-detail">
-								<img src="../img/iwatch2.jpg"/>
-								<h4>iWatch3代 <strong>￥500.00</strong></h4>
-							</div>
-							<div class="section-1-1-detail">
-								<img src="../img/iwatch.jpg"/>
-								<h4>Iphone7 <strong>￥500.00</strong></h4>
-							</div>
-							<div class="section-1-1-detail">
-								<img src="../img/iphone6.png"/>
-								<h4>IphoneSE <strong>￥500.00</strong></h4>
-							</div>
-						</div>
-					</div>
-				</div>
-				<h2 id="section-3">第三部分</h2>
-				<h2 id="section-4">第四部分</h2>
-				<h2 id="section-5">第五部分</h2>
 			</div>
 		</div>
 
