--- a/src/main/resources/static/html/fabu.html
+++ b/src/main/resources/static/html/fabu.html
@@ -17,6 +17,8 @@
 	<script src="../newFileInput/themes/explorer-fa/theme.js" type="text/javascript"></script>
 	<script src="../newFileInput/themes/fa/theme.js" type="text/javascript"></script>
 	<script src="../newFileInput/popper.min.js" type="text/javascript"></script>
+	<script src="../js/common.js"></script>
+	<script src="../js/fileURL.js"></script>
 	<meta charset="UTF-8">
 	<title></title>
 </head>
@@ -43,7 +45,7 @@
 			<button type="submit" class="btn btn-danger" id="sousuoBtn">搜索</button>
 		</form>
 		<div id="perDiv" class="navbar-header navbar-right">
-			<a id="perA" class="navbar-brand" href="person.html?index=personZL"><img src="" id="perPic" class="img-circle"></a>
+			<a id="perA" class="navbar-brand"><img src="" id="perPic" class="img-circle"></a>
 			<ul class="nav navbar-nav navbar-right" id="loginOrLoginOut">
 				<li class="loginOrLoginOut"><a href="login.html?index=regist"><span class="glyphicon glyphicon-user"></span> 注册</a></li>
 				<li class="loginOrLoginOut"><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> 登录</a></li>
