--- a/src/main/resources/static/html/main.html
+++ b/src/main/resources/static/html/main.html
@@ -41,7 +41,7 @@
 					<button type="submit" class="btn btn-danger" id="sousuoBtn">搜索</button>
 				</form>
 				<div id="perDiv" class="navbar-header navbar-right">
-					<a id="perA" class="navbar-brand" href="person.html?index=personZL"><img src="" id="perPic" class="img-circle"></a>
+					<a id="perA" class="navbar-brand"><img src="" id="perPic" class="img-circle"></a>
 					<ul class="nav navbar-nav navbar-right" id="loginOrLoginOut">
 						<li class="loginOrLoginOut"><a href="login.html?index=regist"><span class="glyphicon glyphicon-user"></span> 注册</a></li>
 						<li class="loginOrLoginOut"><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> 登录</a></li>
