--- a/src/main/resources/static/html/fabu.html
+++ b/src/main/resources/static/html/fabu.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>SK嗖嗖-嗖嗖就有</title>
+	<link rel="shortcut icon" href="../img/favicon.ico"/>
 	<link rel="stylesheet" href="../css/bootstrap.css" />
 	<link rel="stylesheet" href="../css/bootstrap-theme.css" />
 	<link rel="stylesheet" href="../css/common.css">
