--- a/src/main/resources/static/html/person.html
+++ b/src/main/resources/static/html/person.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>SK嗖嗖-嗖嗖就有</title>
+		<link rel="shortcut icon" href="../img/favicon.ico"/>
 		<link rel="stylesheet" href="../css/bootstrap-theme.css" />
 		<link rel="stylesheet" href="../css/bootstrap.css" />
 		<link rel="stylesheet" href="../css/bootstrap.min.css" />
