--- a/src/main/resources/static/html/main.html
+++ b/src/main/resources/static/html/main.html
@@ -264,19 +264,10 @@
 
 
 		<div id="recommend-all">
-			<!--<div id="myScrollspy">-->
-				<!--<ul class="nav nav-tabs nav-stacked" id="myNav">-->
-					<!--<li class="active"><a href="#section-1">电子产品</a></li>-->
-					<!--<li><a href="#section-2">书籍资料</a></li>-->
-					<!--<li><a href="#section-3">日常用品</a></li>-->
-					<!--<li><a href="#section-4">兼职专区</a></li>-->
-					<!--<li><a href="#section-5">待开发区</a></li>-->
-				<!--</ul>-->
-			<!--</div>-->
 			<div id="section">
 				<div class="section-1 F8FAFCBackground">
 					<div class="section-red-title">
-						<h3>SK嗖嗖 <strong class="section-1-strong">SK SOU SOU</strong></h3>
+						<h3>嗖嗖精品 <strong class="section-1-strong">SOU SOU BOUTIQUE</strong></h3>
 					</div>
 					<div class="section-1-pic">
 						<div class="hovereffect">
@@ -313,12 +304,12 @@
 						</div>
 						<div class="selection-1-1">
 							<div class="section-1-1-detail">
-								<img src="../img/ipad.jpg"/>
-								<h4>小米Note<strong>￥300.00</strong> </h4>
+								<img src="../img/IphoneXTM.png"/>
+								<h4>IphoneX<strong>￥300.00</strong> </h4>
 							</div>
 							<div class="section-1-1-detail">
-								<img src="../img/ipad.jpg"/>
-								<h4>Ipad4 32G <strong>￥500.00</strong></h4>
+								<img src="../img/shuji1.png"/>
+								<h4>治国理政 <strong>￥5.00</strong></h4>
 							</div>
 							<div class="section-1-1-detail">
 								<img src="../img/iwatch2.jpg"/>
@@ -338,7 +329,54 @@
 			</div>
 		</div>
 
+		<div class="owner-team">
+			<h3 class="team-title"><strong>SK嗖嗖</strong>团队成员</h3>
+			<div class="team-teamer">
+				<img class="img-circle team-pic" src="../img/me.JPG">
+				<h4 class="teaner-name"><strong>Double</strong></h4>
+				<h5 class="teaner-name">首席开发工程师</h5>
+			</div>
+			<div class="team-teamer">
+				<img class="img-circle team-pic" src="../img/perPic.png">
+				<h4 class="teaner-name">ZXZ</h4>
+				<h5 class="teaner-name">首席CEO</h5>
+			</div>
+			<div class="team-teamer">
+				<img class="img-circle team-pic" src="../img/perPic.png">
+				<h4 class="teaner-name">XZZ</h4>
+				<h5 class="teaner-name">首席CFO</h5>
+			</div>
+			<div class="team-teamer">
+				<img class="img-circle team-pic" src="../img/huoban.png" >
+				<h4 class="teaner-name">welcome</h4>
+				<h5 class="teaner-name">期待你的加入</h5>
+			</div>
+		</div>
 
+
+		<div class="connect">
+			<div class="connect-our">
+				<div>
+					<img src="../img/skss.png" />
+				</div>
+				<div>
+					<h4>联系我们 / contact us</h4>
+					<h4>QQ群:693738784</h4>
+					<h4>微信:15005422208</h4>
+					<h4>地址:山东省青岛市前湾港路579号</h4>
+				</div>
+				<div>
+					<img src="../img/qq-con.jpg"/>
+					<h5>QQ群</h5>
+				</div>
+				<div>
+					<img src="../img/wx-con.jpg"/>
+					<h5>微信群</h5>
+				</div>
+			</div>
+		</div>
+
+		<div class="copyAllRight">版权所有 © All Rights Reserved,鲁ICP备15000254号-1</div>
 		
 </body>
 </html>
