--- a/src/main/resources/static/html/main.html
+++ b/src/main/resources/static/html/main.html
@@ -237,11 +237,14 @@
 				    </ol>
 				    <!-- 轮播（Carousel）项目 -->
 				    <div class="carousel-inner">
-				        <div class="item active">
-				            <object  style="border:0px" type="text/x-scriptlet" data="specialEffects.html" width=100% height=100%;></object>
+				        <div class="item active item1">
+							<div class="item1-title">SK嗖嗖-山科人的二手发布平台</div>
 				        </div>
-				        <div class="item">
-				            <object  style="border:0px" type="text/x-scriptlet" data="specialEffects2.html" width=100% height=100%;></object>
+				        <div class="item item2">
+							<div class="item2-title">
+								SK嗖嗖 需要你的意见
+								<div><button class="btn">留下意见</button></div>
+							</div>
 				        </div>
 				        <div class="item">
 				            <object  style="border:0px" type="text/x-scriptlet" data="specialEffects3.html" width=100% height=100%;></object>
