--- a/src/main/resources/static/html/main.html
+++ b/src/main/resources/static/html/main.html
@@ -233,7 +233,7 @@
 				    <ol class="carousel-indicators" style="display: none;">
 				        <li id="li1" data-target="#myCarousel" data-slide-to="0" class="active"></li>
 				        <li id="li2" data-target="#myCarousel" data-slide-to="1"></li>
-				        <li id="li3" data-target="#myCarousel" data-slide-to="2"></li>
+				        <!--<li id="li3" data-target="#myCarousel" data-slide-to="2"></li>-->
 				    </ol>
 				    <!-- 轮播（Carousel）项目 -->
 				    <div class="carousel-inner">
@@ -246,9 +246,9 @@
 								<div><button class="btn">留下意见</button></div>
 							</div>
 				        </div>
-				        <div class="item">
-				            <object  style="border:0px" type="text/x-scriptlet" data="specialEffects3.html" width=100% height=100%;></object>
-				        </div>
+				        <!--<div class="item">-->
+				           <!---->
+				        <!--</div>-->
 				    </div>
 				    <!-- 轮播（Carousel）导航 -->
 				    <a id="prev" class="carousel-control left" href="#myCarousel" data-slide="prev">
