--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -11,6 +11,7 @@
     <script src="../js/drag.js"></script>
     <script src="../js/b_login.js"></script>
     <script src="../js/cookie.js"></script>
+    <script src="../js/fileURL.js"></script>
     <title>登录页面</title>
 </head>
 <body>
