图片上传（改吐了~~再也不想改了）

--- a/src/main/resources/static/html/goodsDetails.html
+++ b/src/main/resources/static/html/goodsDetails.html
@@ -12,22 +12,22 @@
     <ul class="portfolio-items" id="goodsDetailPic">
         <li class="item falldown" id="item2">
             <figure>
-                <div class="view"><img id="goodsPic2" src="../sliderImg/iphoneX6.png"/></div>
+                <div class="view"><img id="goodsPic2" src="../img/perCenter/loading.gif"/></div>
             </figure>
         </li>
         <li class="item falldown" id="item3">
             <figure>
-                <div class="view"><img id="goodsPic3" src="../sliderImg/iphoneX6.png"/></div>
+                <div class="view"><img id="goodsPic3" src="../img/perCenter/loading.gif"/></div>
             </figure>
         </li>
         <li class="item falldown" id="item4">
             <figure>
-                <div class="view"><img id="goodsPic4" src="../sliderImg/iphoneX6.png"/></div>
+                <div class="view"><img id="goodsPic4" src="../img/perCenter/loading.gif"/></div>
             </figure>
         </li>
         <li class="item falldown" id="item5">
             <figure>
-                <div class="view"><img id="goodsPic5" src="../sliderImg/iphoneX6.png"/></div>
+                <div class="view"><img id="goodsPic5" src="../img/perCenter/loading.gif"/></div>
             </figure>
         </li>
     </ul>
