--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="../css/bootstrap-theme.min.css" />
 	<link rel="stylesheet" href="../css/home.css">
 	<link rel="stylesheet" href="../css/common.css">
+	<link rel="stylesheet" href="../css/styles.css"/>
 	<script src="../js/jquery-3.1.1.min.js"></script>
 	<script src="../js/bootstrap.min.js"></script>
 	<script src="../js/home.js"></script>
@@ -16,6 +17,9 @@
 	<script src="../js/jquery.cookie.js"></script>
 	<script src="../js/cookie.js"></script>
 	<script src="../js/fileURL.js"></script>
+	<script src="../sliderJs/jquery.mousewheel.js"></script>
+	<script src="../sliderJs/modernizr-1.5.min.js"></script>
+	<script src="../sliderJs/scripts.js"></script>
 	<meta charset="UTF-8">
 	</head>
 	<body>
@@ -145,7 +149,10 @@
   						</div>
   						<hr id="hr1" style="margin-top: 2%;"/>
   						<!--滑块展示开始55-->
-  						<object style="height: 310px;" id="obj1" style="border:0px" type="text/x-scriptlet" data="goodsDetails.html" width=100% height=615px;></object>
+						<div class="demo-wrapper">
+							<ul class="portfolio-items" id="goodsDetailPic">
+							</ul>
+						</div>
     					<!--滑块展示结束-->
     					<div id="goodsOthers">
 							<textarea id="ownerSay" class="form-control" rows="5"  readonly="readonly">
