--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -4,7 +4,6 @@
 	<title>SK嗖嗖-嗖嗖就有</title>
 	<link rel="shortcut icon" href="../img/favicon.ico"/>
 	<link rel="stylesheet" href="../css/bootstrap-theme.css" />
-	<link rel="stylesheet" href="../css/bootstrap.css" />
 	<link rel="stylesheet" href="../css/bootstrap.min.css" />
 	<link rel="stylesheet" href="../css/bootstrap-theme.min.css" />
 	<link rel="stylesheet" href="../css/home.css">
@@ -142,10 +141,10 @@
 								<div id="weixin-div"><img id="weixinPic" src="../img/weixin.png"/><span id="weixinSpan"></span><img id="fuzhi-pic" title="点击复制" src="../img/fuzhi.png"/></div>
 								<div id="area-div"><img id="areaPic" src="../img/area.png"/><span id="areaSpan"></span></div>
 							</div>
-							<div id="other-part-btn">
-								<button class="btn" id="addCollectBtn"><span class="glyphicon glyphicon-heart"></span> 加入收藏夹</button>
-								<button class="btn" id="showDetailBtn">查看详情</button>
-							</div>
+							<!--<div id="other-part-btn">-->
+								<!--<button class="btn" id="addCollectBtn"><span class="glyphicon glyphicon-heart"></span> 加入收藏夹</button>-->
+								<!--<button class="btn" id="showDetailBtn">查看详情</button>-->
+							<!--</div>-->
   						</div>
   						<hr id="hr1" style="margin-top: 2%;"/>
   						<!--滑块展示开始55-->
