--- a/src/main/resources/static/html/main.html
+++ b/src/main/resources/static/html/main.html
@@ -243,7 +243,7 @@
 				        <div class="item item2">
 							<div class="item2-title">
 								SK嗖嗖 需要你的意见
-								<div><button class="btn">留下意见</button></div>
+								<div><button class="btn" onclick="addSuggestion()">留下意见</button></div>
 							</div>
 				        </div>
 				        <!--<div class="item">-->
