--- a/src/main/resources/static/html/person.html
+++ b/src/main/resources/static/html/person.html
@@ -261,14 +261,18 @@
 							     </select>
   							</div>
   							<div id="edit-goodsType"><span>类型</span>
-  								 <select id="edit-goodsType-select">
+  								 <select id="edit-goodsType1-select">
 								      <option value="">请选择类型</option>
 								      <option value="SM">数码闲置</option>
 								      <option value="SJ">书籍闲置</option>
 								      <option value="RC">日常用品</option>
 								      <option value="JZ">兼职信息</option>
-								       <option value="Z">其他</option>
+									  <option value="Z">其他</option>
 							     </select>
+								 -
+								<select id="edit-goodsType2-select">
+
+								</select>
   							</div>
   							<div id="edit-jiage-div"><img id="edit-jiagePic" src="../img/jiage.png"/><input id="edit-jiage-input" type="number" value="0.00"/></div>
   							<div id="edit-qq-div"><img id="edit-qqPic" src="../img/qq.png"/><input id="edit-qq-input" value="***"/></div>
