搜索功能完善

--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -59,7 +59,7 @@
 			<div id="findDiv" class="input-group">
 				<input id="findInput" type="text" class="form-control input-lg" placeholder="嗖嗖就有~"/>
 				<span class="input-group-btn">  
-	               <button class="btn btn-default btn-lg"><span class="glyphicon glyphicon-search"></span></button>  
+	               <button id="sousou" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-search"></span></button>
 	            </span>  
 			</div>	
 		</div>
