--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -141,10 +141,10 @@
 								<div id="weixin-div"><img id="weixinPic" src="../img/weixin.png"/><span id="weixinSpan"></span><img id="fuzhi-pic" title="点击复制" src="../img/fuzhi.png"/></div>
 								<div id="area-div"><img id="areaPic" src="../img/area.png"/><span id="areaSpan"></span></div>
 							</div>
-							<!--<div id="other-part-btn">-->
-								<!--<button class="btn" id="addCollectBtn"><span class="glyphicon glyphicon-heart"></span> 加入收藏夹</button>-->
+							<div id="other-part-btn">
+								<button class="btn" id="addCollectBtn"><span class="glyphicon glyphicon-heart"></span> <span id="ifCollect">加入收藏夹</span></button>
 								<!--<button class="btn" id="showDetailBtn">查看详情</button>-->
-							<!--</div>-->
+							</div>
   						</div>
   						<hr id="hr1" style="margin-top: 2%;"/>
   						<!--滑块展示开始55-->
