添加特殊闲置搜索功能

--- a/src/main/resources/static/html/main.html
+++ b/src/main/resources/static/html/main.html
@@ -58,10 +58,10 @@
 							<div class="daohang1Hover">
 								<div class="daohang1HoverTop">
 									<p class="daohang1HoverP">全部<h5 class="page-header"></h5></p>
-									<button class="btn daohang1HoverBtn">手机</button>
-									<button class="btn daohang1HoverBtn">平板</button>
-									<button class="btn daohang1HoverBtn">电脑</button>
-									<button class="btn daohang1HoverBtn">鼠标</button>
+									<button class="btn daohang1HoverBtn" onclick="souSpecialType('SJ')">手机</button>
+									<button class="btn daohang1HoverBtn" onclick="souSpecialType('PB')">平板</button>
+									<button class="btn daohang1HoverBtn" onclick="souSpecialType('DN')">电脑</button>
+									<button class="btn daohang1HoverBtn" onclick="souSpecialType('SB')">鼠标</button>
 								</div>
 								<div class="daohang1HoverBottom">
 									<div class="daohang1HoverRec">
