--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -124,7 +124,7 @@
   					
   					<div class="modal-body">
   						<div id="pic-part">
-  							<img id="goodsPic1" src="../img/IphoneX.png" />
+  							<img id="goodsPic1" src="../img/perCenter/loading.gif" />
   						</div>
   						<div id="other-part">
   							<div><h3 id="goodsName"></h3></div>
