添加推荐闲置查看详情功能

--- a/src/main/resources/static/html/main.html
+++ b/src/main/resources/static/html/main.html
@@ -92,11 +92,11 @@
 							<div class="daohang1Hover">
 								<div class="daohang1HoverTop">
 									<p class="daohang1HoverP">全部<h5 class="page-header"></h5></p>
-									<button class="btn daohang1HoverBtn">专业课</button>
-									<button class="btn daohang1HoverBtn">选修课</button>
-									<button class="btn daohang1HoverBtn">考研资料</button>
-									<button class="btn daohang1HoverBtn">课外书籍</button>
-									<button class="btn daohang1HoverBtn">国内外名著</button>
+									<button class="btn daohang1HoverBtn" onclick="souSpecialType('ZYK')">专业课</button>
+									<button class="btn daohang1HoverBtn" onclick="souSpecialType('XXK')">选修课</button>
+									<button class="btn daohang1HoverBtn" onclick="souSpecialType('KYZL')">考研资料</button>
+									<button class="btn daohang1HoverBtn" onclick="souSpecialType('KWSJ')">课外书籍</button>
+									<button class="btn daohang1HoverBtn" onclick="souSpecialType('GNW')">国内外名著</button>
 								</div>
 								<div class="daohang1HoverBottom">
 									<div class="daohang1HoverRec">
@@ -127,10 +127,7 @@
 							<div class="daohang1Hover">
 								<div class="daohang1HoverTop">
 									<p class="daohang1HoverP">全部<h5 class="page-header"></h5></p>
-									<button class="btn daohang1HoverBtn">手机</button>
-									<button class="btn daohang1HoverBtn">平板</button>
-									<button class="btn daohang1HoverBtn">电脑</button>
-									<button class="btn daohang1HoverBtn">鼠标</button>
+									<button class="btn daohang1HoverBtn" onclick="souSpecialType('RC')">日常用品</button>
 								</div>
 								<div class="daohang1HoverBottom">
 									<div class="daohang1HoverRec">
@@ -161,11 +158,9 @@
 							<div class="daohang1Hover">
 								<div class="daohang1HoverTop">
 									<p class="daohang1HoverP">全部<h5 class="page-header"></h5></p>
-									<button class="btn daohang1HoverBtn">专业课</button>
-									<button class="btn daohang1HoverBtn">选修课</button>
-									<button class="btn daohang1HoverBtn">考研资料</button>
-									<button class="btn daohang1HoverBtn">课外书籍</button>
-									<button class="btn daohang1HoverBtn">国内外名著</button>
+									<button class="btn daohang1HoverBtn" onclick="souSpecialType('XNJZ')">校内兼职</button>
+									<button class="btn daohang1HoverBtn" onclick="souSpecialType('XWJZ')">校外兼职</button>
+
 								</div>
 								<div class="daohang1HoverBottom">
 									<div class="daohang1HoverRec">
@@ -196,10 +191,7 @@
 							<div class="daohang1Hover">
 								<div class="daohang1HoverTop">
 									<p class="daohang1HoverP">全部<h5 class="page-header"></h5></p>
-									<button class="btn daohang1HoverBtn">手机</button>
-									<button class="btn daohang1HoverBtn">平板</button>
-									<button class="btn daohang1HoverBtn">电脑</button>
-									<button class="btn daohang1HoverBtn">鼠标</button>
+									<button class="btn daohang1HoverBtn" onclick="souSpecialType('HT')">话题</button>
 								</div>
 								<div class="daohang1HoverBottom">
 									<div class="daohang1HoverRec">
