--- a/src/main/resources/static/html/speciallyGood.html
+++ b/src/main/resources/static/html/speciallyGood.html
@@ -52,19 +52,19 @@
 			<!-- 存放大图的容器-->
 			<div class="all">
 				<div class="top-img">
-					<div class="activeimg">
-						<div><img src="../img/ewm.png"></div>
-						<div><img src="../img/huoban.png"></div>
-						<div><img src="../img/3.jpg"></div>
-						<div><img src="../img/4.jpg"></div>
-						<div><img src="../img/5.jpg"></div>
+					<div class="activeimg" id="activeimg">
+						<div><img id="pic1" src="../img/ewm.png"></div>
+						<div><img id="pic2" src="../img/huoban.png"></div>
+						<div><img id="pic3" src="../img/3.jpg"></div>
+						<div><img id="pic4" src="../img/4.jpg"></div>
+						<div><img id="pic5" src="../img/5.jpg"></div>
 					</div>
 					<div class="left"><img src="../img/left.png"> </div>
 					<div class="right"><img src="../img/right.png"></div>
 				</div>
 				<!-- 存放缩略图的容器-->
 				<div class="bot-img">
-					<ul>
+					<ul id="bot-img" >
 						<li class="active"><img src="../img/ewm.png"></li>
 						<li><img src="../img/huoban.png"></li>
 						<li><img src="../img/3.jpg"></li>
@@ -74,8 +74,8 @@
 		</div>
 		
 		<div class="detailBox">
-			<div><input type="text" value="Iphone7" disabled="disabled"/></div>
-			<div><input type="text" value="全新/国行/同城交易" disabled="disabled"/></div>
+			<div><input id="name" type="text" value="Iphone7" disabled="disabled"/></div>
+			<div><input id="words" type="text" value="全新/国行/同城交易" disabled="disabled"/></div>
 			<div class="hr1"></div>
 			<div>
 				<div class="detail1"><img src="../img/jiage.png"><input id="price" value="200.0" disabled="disabled"/></div>
